--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant Shop</title>
+    <title>Plant Store</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@400;500;700;900&family=Sora:wght@100..800&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <section id="front">
-
+        <div class="background-filter"></div>
+        <nav class="nav-main">
+            <div class="nav-left">
+                Green Store
+            </div>
+            <div class="nav-right">
+                <a href="./index.html" class="nav-link">Home</a>
+                <a href="" class="nav-link">Plants</a>
+                <a href="" class="nav-link">About</a>
+                <a href="" class="nav-link">Contact</a>
+                <a href="" class="nav-link">Cart</a>
+                <a href="" class="nav-link">Menu</a>
+            </div>
+        </nav>
+        <div class="front-container">
+            <div class="front-text">
+                <p class="welcome-text">WELCOME TO THE GREEN STORE</p>
+                <p class="slogan">Let’s Bring the Spring to <br> Your Home</p>
+            </div>
+            <button type="button" class="white-button">Shop Now</button>
+        </div>
     </section>
     <section id="new-plants">
 
