new-plants section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@400;500;700;900&family=Sora:wght@100..800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;600;700;900&family=Sora:wght@100..800&display=swap"
         rel="stylesheet">
 </head>
 
@@ -31,13 +31,61 @@
         </nav>
         <div class="front-container">
             <div class="front-text">
-                <p class="welcome-text">WELCOME TO THE GREEN STORE</p>
-                <p class="slogan">Let’s Bring the Spring to <br> Your Home</p>
+                <h2 class="welcome-text">WELCOME TO THE GREEN STORE</h2>
+                <h1 class="slogan">Let’s Bring the Spring to <br> Your Home</h1>
             </div>
-            <button type="button" class="white-button">Shop Now</button>
+            <button type="button" class="white button">Shop Now</button>
         </div>
     </section>
     <section id="new-plants">
+        <div class="container new-plants-section">
+            <h3 class="new-plants-title">New Plants</h3>
+            <div class="plants-group">
+                <div class="plant-card">
+                    <img class="plant-image" src="./assets/plants/plant-1.png" alt="">
+                    <div class="plant-description">
+                        <h4 class="plant-name">Bird of Paradise</h4>
+                        <p class="plant-price">$124.90</p>
+                    </div>
+                </div>
+                <div class="plant-card">
+                    <img class="plant-image" src="./assets/plants/plant-2.png" alt="">
+                    <div class="plant-description">
+                        <h4 class="plant-name">Zz Plants</h4>
+                        <p class="plant-price">$129.90</p>
+                    </div>
+                </div>
+                <div class="plant-card">
+                    <img class="plant-image" src="./assets/plants/plant-3.png" alt="">
+                    <div class="plant-description">
+                        <h4 class="plant-name">Calarhea Beauty Star</h4>
+                        <p class="plant-price">$79.90</p>
+                    </div>
+                </div>
+                <div class="plant-card">
+                    <img class="plant-image" src="./assets/plants/plant-4.png" alt="">
+                    <div class="plant-description">
+                        <h4 class="plant-name">Birdnest Japanes</h4>
+                        <p class="plant-price">$89.90</p>
+                    </div>
+                </div>
+                <div class="plant-card">
+                    <img class="plant-image" src="./assets/plants/plant-5.png" alt="">
+                    <div class="plant-description">
+                        <h4 class="plant-name">Hoya Obovatum</h4>
+                        <p class="plant-price">$184.90</p>
+                    </div>
+                </div>
+                <div class="plant-card">
+                    <img class="plant-image" src="./assets/plants/plant-6.png" alt="">
+                    <div class="plant-description">
+                        <h4 class="plant-name">Monstera Deliciosa</h4>
+                        <p class="plant-price">$224.90</p>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="green button wide">Shop Now</button>
+        </div>
 
     </section>
     <section id="our-story">
