our story section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,26 @@
 
     </section>
     <section id="our-story">
-
+        <div class="container our-story-section">
+            <img class="our-story-banner" src="./assets/banners/our-story.png" alt="">
+            <div class="our-story-info">
+                <div class="our-story-head">
+                    <h3>OUR STORY</h3>
+                    <h4>For People Who Love Plants</h4>
+                </div>
+                <div class="our-story-text">
+                    <p>Vivamus quam sociis tristique diam at donec nisi, <br>
+                        hendrerit leo nunc at velit lacinia porttitor a nulla tellus<br>
+                        ultriices varius aliquet sed in piacerat.</p>
+                    <p>Facilisis eu faucibus diam cursus pulvinar consectetur <br>
+                        purus sem felis, mauris consectetur nisl vitae gravida <br>
+                        ultricies sem condimentum aliquet ut sed gravida amet <br>
+                        vitae euismod pulvinar volutpat laoreet pharetra.
+                    </p>
+                </div>
+                <button class="green button" type="button">Read More</button>
+            </div>
+        </div>
     </section>
     <section id="feedback">
 
