--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <section id="new-plants">
         <div class="container new-plants-section">
-            <h3 class="new-plants-title">New Plants</h3>
+            <h3 class="section-title">New Plants</h3>
             <div class="plants-group">
                 <div class="plant-card">
                     <img class="plant-image" src="./assets/plants/plant-1.png" alt="">
