--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
             </div>
             <button type="button" class="green button wide">Shop Now</button>
         </div>
-
     </section>
     <section id="our-story">
         <div class="container our-story-section">
@@ -111,7 +110,35 @@
         </div>
     </section>
     <section id="feedback">
-
+        <div class="container feedback-section">
+            <div class="feedback-section-title">
+                <h3 class="section-title">What Our Customer Say</h3>
+                <hr>
+            </div>
+            <div class="feedback-cards-group">
+                <div class="feedback-card">
+                    <div class="feedback-section-comma">‘‘</div>
+                    <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
+                        amet morbi egestas hendrerit.</div>
+                    <img class="feedback-photo" src="./assets/customers/customer-1.png" alt="">
+                    <div class="feedback-name">JENNIFER LEWIS</div>
+                </div>
+                <div class="feedback-card">
+                    <div class="feedback-section-comma">‘‘</div>
+                    <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
+                        amet morbi egestas hendrerit.</div>
+                    <img class="feedback-photo" src="./assets/customers/customer-2.png" alt="">
+                    <div class="feedback-name">ALICIA HEART</div>
+                </div>
+                <div class="feedback-card">
+                    <div class="feedback-section-comma">‘‘</div>
+                    <div class="feedback-text">Sed odio donec curabitur auctor amet Sed odio donec curabitur auctor amet
+                        amet morbi egestas hendrerit.</div>
+                    <img class="feedback-photo" src="./assets/customers/customer-3.png" alt="">
+                    <div class="feedback-name">JUAN CARLOS</div>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="gift-cards">
 
