gift card section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,12 @@
         </div>
     </section>
     <section id="gift-cards">
-
+        <div class="gift-cards-text">
+            <h3>GIFT CARD</h3>
+            <h4>Give the Gift of Greenery</h4>
+            <p>Pretium tortor risus enim neque quis pellentesque maecenas proin odio eget arcu.</p>
+            <button class="white button light-wide" type="button">Purchase A Gift Card</button>
+        </div>
     </section>
     <section id="principles">
 
