--- a/index.html
+++ b/index.html
@@ -149,7 +149,35 @@
         </div>
     </section>
     <section id="principles">
-
+        <div class="container principles-group">
+            <div class="principle-card">
+                <div class="principle-img">
+                    <img src="./assets/icons/lock.svg" alt="">
+                </div>
+                <div class="principle-text">
+                    <h4>SECURE PAYMENT</h4>
+                    <p>Enimod laorect eget turpis platea</p>
+                </div>
+            </div>
+            <div class="principle-card">
+                <div class="principle-img">
+                    <img src="./assets/icons/case.svg" alt="">
+                </div>
+                <div class="principle-text">
+                    <h4>DELIVERED WITH CARE</h4>
+                    <p>Pharetra molestie viverra placerat</p>
+                </div>
+            </div>
+            <div class="principle-card">
+                <div class="principle-img">
+                    <img src="./assets/icons/service.svg" alt="">
+                </div>
+                <div class="principle-text">
+                    <h4>EXCELLENT SERVICE</h4>
+                    <p>Ultricies risus integer sed placerat</p>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="get-in-touch">
 
