--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <button type="button" class="white button">Shop Now</button>
         </div>
     </section>
-    <section id="new-plants">
-        <div class="container new-plants-section">
+    <section id="new-plants" class="container">
+        <div class="box new-plants-section">
             <h3 class="section-title">New Plants</h3>
             <div class="plants-group">
                 <div class="plant-card">
@@ -87,8 +87,8 @@
             <button type="button" class="green button wide">Shop Now</button>
         </div>
     </section>
-    <section id="our-story">
-        <div class="container our-story-section">
+    <section id="our-story" class="container">
+        <div class="box our-story-section">
             <img class="our-story-banner" src="./assets/banners/our-story.png" alt="">
             <div class="our-story-info">
                 <div class="our-story-head">
@@ -109,8 +109,8 @@
             </div>
         </div>
     </section>
-    <section id="feedback">
-        <div class="container feedback-section">
+    <section id="feedback" class="container">
+        <div class="box feedback-section">
             <div class="feedback-section-title">
                 <h3 class="section-title">What Our Customer Say</h3>
                 <hr>
@@ -148,8 +148,8 @@
             <button class="white button light-wide" type="button">Purchase A Gift Card</button>
         </div>
     </section>
-    <section id="principles">
-        <div class="container principles-group">
+    <section id="principles" class="container">
+        <div class="box principles-group">
             <div class="principle-card">
                 <div class="principle-img">
                     <img src="./assets/icons/lock.svg" alt="">
