get in touch section info + form template

--- a/index.html
+++ b/index.html
@@ -179,8 +179,78 @@
             </div>
         </div>
     </section>
-    <section id="get-in-touch">
+    <section id="get-in-touch" class="container">
+        <div class="box get-in-touch-section">
+            <div class="get-in-touch-info">
+                <div class="head">
+                    <h3>Get In Touch</h3>
+                    <p>Sit vulputate faucibus eget eget scelerisque faucibus malesuada nullam mollis ut
+                        montes, dui
+                        scelerisque ornare.</p>
+                </div>
+                <div class="contacts-group">
+                    <div class="physics">
+                        <div class="contact">
+                            <img src="./assets/icons/locator.svg" alt="">
+                            <div class="contact-type">
+                                <h4>VISIT US</h4>
+                                <p>123 Demo st. 84020 Bihar, India</p>
+                            </div>
+                        </div>
+                        <div class="contact">
+                            <img src="./assets/icons/phone.svg" alt="">
+                            <div class="contact-type">
+                                <h4>CALL US</h4>
+                                <p>+91 7894567890</p>
+                            </div>
+                        </div>
+                        <div class="contact">
+                            <img src="./assets/icons/mail.svg" alt="">
+                            <div class="contact-type">
+                                <h4>EMAIL US</h4>
+                                <p>mail@example.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="websites">
+                        <h4>Follow us</h4>
+                        <div class="icon-group">
+                            <div class="icon">
+                                <img src="./assets/icons/facebook.svg" alt="">
+                            </div>
+                            <div class="icon">
+                                <img src="./assets/icons/youtube.svg" alt="">
+                            </div>
+                            <div class="icon">
+                                <img src="./assets/icons/twitter.svg" alt="">
+                            </div>
+                            <div class="icon">
+                                <img src="./assets/icons/instagram.svg" alt="">
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="get-in-touch-form">
+                <h4>Drop us a line or two</h4>
+                <form name="contact-form">
+                    <div class="contact-form-input">
+                        <label for="name">Name <span>*</span></label>
+                        <input type="text" id="name" placeholder="Full name" required>
+                    </div>
+                    <div class="contact-form-input">
+                        <label for="email">Email <span>*</span></label>
+                        <input type="text" id="email" placeholder="Email address" required>
+                    </div>
+                    <div class="contact-form-input">
+                        <label for="comment">Comment or Message <span>*</span></label>
+                        <input type="text" id="comment" placeholder="Your message" required>
+                    </div>
+                    <button type="submit" class="button green">Submit</button>
+                </form>
+            </div>
+        </div>
     </section>
     <footer>
 
