Get in touch form

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
                     <h4>For People Who Love Plants</h4>
                 </div>
                 <div class="our-story-text">
-                    <p>Vivamus quam sociis tristique diam at donec nisi, <br>
-                        hendrerit leo nunc at velit lacinia porttitor a nulla tellus<br>
+                    <p>Vivamus quam sociis tristique diam at donec nisi,
+                        hendrerit leo nunc at velit lacinia porttitor a nulla tellus
                         ultriices varius aliquet sed in piacerat.</p>
-                    <p>Facilisis eu faucibus diam cursus pulvinar consectetur <br>
-                        purus sem felis, mauris consectetur nisl vitae gravida <br>
-                        ultricies sem condimentum aliquet ut sed gravida amet <br>
+                    <p>Facilisis eu faucibus diam cursus pulvinar consectetur
+                        purus sem felis, mauris consectetur nisl vitae gravida
+                        ultricies sem condimentum aliquet ut sed gravida amet
                         vitae euismod pulvinar volutpat laoreet pharetra.
                     </p>
                 </div>
@@ -180,7 +180,7 @@
         </div>
     </section>
     <section id="get-in-touch" class="container">
-        <div class="box get-in-touch-section">
+        <div class="    get-in-touch-section">
             <div class="get-in-touch-info">
                 <div class="head">
                     <h3>Get In Touch</h3>
@@ -234,16 +234,16 @@
             </div>
             <div class="get-in-touch-form">
                 <h4>Drop us a line or two</h4>
-                <form name="contact-form">
-                    <div class="contact-form-input">
+                <form name="contact-form" class="contact-form">
+                    <div class="form-input contact-form-input">
                         <label for="name">Name <span>*</span></label>
                         <input type="text" id="name" placeholder="Full name" required>
                     </div>
-                    <div class="contact-form-input">
+                    <div class="form-input contact-form-input">
                         <label for="email">Email <span>*</span></label>
                         <input type="text" id="email" placeholder="Email address" required>
                     </div>
-                    <div class="contact-form-input">
+                    <div class="form-input contact-form-input">
                         <label for="comment">Comment or Message <span>*</span></label>
                         <input type="text" id="comment" placeholder="Your message" required>
                     </div>
