--- a/index.html
+++ b/index.html
@@ -96,13 +96,11 @@
                     <h4>For People Who Love Plants</h4>
                 </div>
                 <div class="our-story-text">
-                    <p>Vivamus quam sociis tristique diam at donec nisi,
-                        hendrerit leo nunc at velit lacinia porttitor a nulla tellus
-                        ultriices varius aliquet sed in piacerat.</p>
-                    <p>Facilisis eu faucibus diam cursus pulvinar consectetur
-                        purus sem felis, mauris consectetur nisl vitae gravida
-                        ultricies sem condimentum aliquet ut sed gravida amet
-                        vitae euismod pulvinar volutpat laoreet pharetra.
+                    <p>Vivamus quam sociis tristique diam at donec nisi, hendrerit leo nunc at velit lacinia porttitor a
+                        nulla tellus ultriices varius aliquet sed in piacerat.</p>
+                    <p>Facilisis eu faucibus diam cursus pulvinar consectetur purus sem felis, mauris consectetur nisl
+                        vitae gravida ultricies sem condimentum aliquet ut sed gravida amet vitae euismod pulvinar
+                        volutpat laoreet pharetra.
                     </p>
                 </div>
                 <button class="green button" type="button">Read More</button>
