--- a/index.html
+++ b/index.html
@@ -177,81 +177,127 @@
             </div>
         </div>
     </section>
-    <section id="get-in-touch" class="container">
-        <div class="    get-in-touch-section">
-            <div class="get-in-touch-info">
-                <div class="head">
-                    <h3>Get In Touch</h3>
-                    <p>Sit vulputate faucibus eget eget scelerisque faucibus malesuada nullam mollis ut
-                        montes, dui
-                        scelerisque ornare.</p>
+    <footer>
+        <section id="get-in-touch" class="container">
+            <div class="    get-in-touch-section">
+                <div class="get-in-touch-info">
+                    <div class="head">
+                        <h3>Get In Touch</h3>
+                        <p>Sit vulputate faucibus eget eget scelerisque faucibus malesuada nullam mollis ut
+                            montes, dui
+                            scelerisque ornare.</p>
+                    </div>
+                    <div class="contacts-group">
+                        <div class="physics">
+                            <div class="contact">
+                                <img src="./assets/icons/locator.svg" alt="">
+                                <div class="contact-type">
+                                    <h4>VISIT US</h4>
+                                    <p>123 Demo st. 84020 Bihar, India</p>
+                                </div>
+                            </div>
+                            <div class="contact">
+                                <img src="./assets/icons/phone.svg" alt="">
+                                <div class="contact-type">
+                                    <h4>CALL US</h4>
+                                    <p>+91 7894567890</p>
+                                </div>
+                            </div>
+                            <div class="contact">
+                                <img src="./assets/icons/mail.svg" alt="">
+                                <div class="contact-type">
+                                    <h4>EMAIL US</h4>
+                                    <p>mail@example.com</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="websites">
+                            <h4>Follow us</h4>
+                            <div class="icon-group">
+                                <div class="icon">
+                                    <img src="./assets/icons/facebook.svg" alt="">
+                                </div>
+                                <div class="icon">
+                                    <img src="./assets/icons/youtube.svg" alt="">
+                                </div>
+                                <div class="icon">
+                                    <img src="./assets/icons/twitter.svg" alt="">
+                                </div>
+                                <div class="icon">
+                                    <img src="./assets/icons/instagram.svg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="contacts-group">
-                    <div class="physics">
-                        <div class="contact">
-                            <img src="./assets/icons/locator.svg" alt="">
-                            <div class="contact-type">
-                                <h4>VISIT US</h4>
-                                <p>123 Demo st. 84020 Bihar, India</p>
-                            </div>
+                <div class="get-in-touch-form">
+                    <h4>Drop us a line or two</h4>
+                    <form name="contact-form" class="contact-form">
+                        <div class="form-input contact-form-input">
+                            <label for="name">Name <span>*</span></label>
+                            <input type="text" id="name" placeholder="Full name" required>
                         </div>
-                        <div class="contact">
-                            <img src="./assets/icons/phone.svg" alt="">
-                            <div class="contact-type">
-                                <h4>CALL US</h4>
-                                <p>+91 7894567890</p>
-                            </div>
+                        <div class="form-input contact-form-input">
+                            <label for="email">Email <span>*</span></label>
+                            <input type="text" id="email" placeholder="Email address" required>
                         </div>
-                        <div class="contact">
-                            <img src="./assets/icons/mail.svg" alt="">
-                            <div class="contact-type">
-                                <h4>EMAIL US</h4>
-                                <p>mail@example.com</p>
-                            </div>
+                        <div class="form-input contact-form-input">
+                            <label for="comment">Comment or Message <span>*</span></label>
+                            <input type="text" id="comment" placeholder="Your message" required>
                         </div>
-                    </div>
-                    <div class="websites">
-                        <h4>Follow us</h4>
-                        <div class="icon-group">
-                            <div class="icon">
-                                <img src="./assets/icons/facebook.svg" alt="">
-                            </div>
-                            <div class="icon">
-                                <img src="./assets/icons/youtube.svg" alt="">
-                            </div>
-                            <div class="icon">
-                                <img src="./assets/icons/twitter.svg" alt="">
-                            </div>
-                            <div class="icon">
-                                <img src="./assets/icons/instagram.svg" alt="">
-                            </div>
-
-                        </div>
-                    </div>
+                        <button type="submit" class="button green">Submit</button>
+                    </form>
                 </div>
             </div>
-            <div class="get-in-touch-form">
-                <h4>Drop us a line or two</h4>
-                <form name="contact-form" class="contact-form">
-                    <div class="form-input contact-form-input">
-                        <label for="name">Name <span>*</span></label>
-                        <input type="text" id="name" placeholder="Full name" required>
+        </section>
+        <div class="footer-links container">
+            <h1>Green Store</h1>
+            <div class="footer-links-group">
+                <div class="footer-links-column">
+                    <h4>Pages</h4>
+                    <div class="links-group">
+                        <a herf="">Home</a>
+                        <a herf="">About</a>
+                        <a herf="">Service</a>
+                        <a herf="">Features</a>
                     </div>
-                    <div class="form-input contact-form-input">
-                        <label for="email">Email <span>*</span></label>
-                        <input type="text" id="email" placeholder="Email address" required>
+                </div>
+                <div class="footer-links-column">
+                    <h4>Pages</h4>
+                    <div class="links-group">
+                        <a herf="">Home</a>
+                        <a herf="">About</a>
+                        <a herf="">Service</a>
+                        <a herf="">Features</a>
                     </div>
-                    <div class="form-input contact-form-input">
-                        <label for="comment">Comment or Message <span>*</span></label>
-                        <input type="text" id="comment" placeholder="Your message" required>
+                </div>
+                <div class="footer-links-column">
+                    <h4>Contact us</h4>
+                    <div class="links-group">
+                        <p>123 Demo st. India <br>Bihar 84020</p>
+                        <p>mail@example.com</p>
+                        <p>+91789457890</p>
                     </div>
-                    <button type="submit" class="button green">Submit</button>
-                </form>
+                </div>
             </div>
         </div>
-    </section>
-    <footer>
-
+        <div class="footer-copyrights container">
+            <h5>© 2021 copyright all right reserved</h5>
+            <div class="icon-group">
+                <div class="icon">
+                    <img src="./assets/icons/facebook.svg" alt="">
+                </div>
+                <div class="icon">
+                    <img src="./assets/icons/youtube.svg" alt="">
+                </div>
+                <div class="icon">
+                    <img src="./assets/icons/twitter.svg" alt="">
+                </div>
+                <div class="icon">
+                    <img src="./assets/icons/instagram.svg" alt="">
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
