--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
     <section id="front">
-        <div class="background-filter"></div>
-        <nav class="nav-main">
+        <nav class="nav-main container">
             <div class="nav-left">
                 Green Store
             </div>
@@ -25,11 +24,11 @@
                 <a href="" class="nav-link">Plants</a>
                 <a href="" class="nav-link">About</a>
                 <a href="" class="nav-link">Contact</a>
-                <a href="" class="nav-link">Cart</a>
-                <a href="" class="nav-link">Menu</a>
+                <a href="" class="nav-link">C</a>
+                <a href="" class="nav-link">M</a>
             </div>
         </nav>
-        <div class="front-container">
+        <div class="front-container container">
             <div class="front-text">
                 <h2 class="welcome-text">WELCOME TO THE GREEN STORE</h2>
                 <h1 class="slogan">Let’s Bring the Spring to <br> Your Home</h1>
@@ -178,8 +177,8 @@
         </div>
     </section>
     <footer>
-        <section id="get-in-touch" class="container">
-            <div class="    get-in-touch-section">
+        <section id="get-in-touch">
+            <div class="get-in-touch-section container">
                 <div class="get-in-touch-info">
                     <div class="head">
                         <h3>Get In Touch</h3>
@@ -250,51 +249,55 @@
                 </div>
             </div>
         </section>
-        <div class="footer-links container">
-            <h1>Green Store</h1>
-            <div class="footer-links-group">
-                <div class="footer-links-column">
-                    <h4>Pages</h4>
-                    <div class="links-group">
-                        <a herf="">Home</a>
-                        <a herf="">About</a>
-                        <a herf="">Service</a>
-                        <a herf="">Features</a>
+        <div class="footer-links">
+            <div class="footer-box container">
+                <h1>Green Store</h1>
+                <div class="footer-links-group">
+                    <div class="footer-links-column">
+                        <h4>Pages</h4>
+                        <div class="links-group">
+                            <a herf="">Home</a>
+                            <a herf="">About</a>
+                            <a herf="">Service</a>
+                            <a herf="">Features</a>
+                        </div>
                     </div>
-                </div>
-                <div class="footer-links-column">
-                    <h4>Pages</h4>
-                    <div class="links-group">
-                        <a herf="">Home</a>
-                        <a herf="">About</a>
-                        <a herf="">Service</a>
-                        <a herf="">Features</a>
+                    <div class="footer-links-column">
+                        <h4>Pages</h4>
+                        <div class="links-group">
+                            <a herf="">Home</a>
+                            <a herf="">About</a>
+                            <a herf="">Service</a>
+                            <a herf="">Features</a>
+                        </div>
                     </div>
-                </div>
-                <div class="footer-links-column">
-                    <h4>Contact us</h4>
-                    <div class="links-group">
-                        <p>123 Demo st. India <br>Bihar 84020</p>
-                        <p>mail@example.com</p>
-                        <p>+91789457890</p>
+                    <div class="footer-links-column">
+                        <h4>Contact us</h4>
+                        <div class="links-group">
+                            <p>123 Demo st. India <br>Bihar 84020</p>
+                            <p>mail@example.com</p>
+                            <p>+91789457890</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="footer-copyrights container">
-            <h5>© 2021 copyright all right reserved</h5>
-            <div class="icon-group">
-                <div class="icon">
-                    <img src="./assets/icons/facebook.svg" alt="">
-                </div>
-                <div class="icon">
-                    <img src="./assets/icons/youtube.svg" alt="">
-                </div>
-                <div class="icon">
-                    <img src="./assets/icons/twitter.svg" alt="">
-                </div>
-                <div class="icon">
-                    <img src="./assets/icons/instagram.svg" alt="">
+        <div class="footer-copyrights">
+            <div class="copyrights-box container">
+                <h5>© 2021 copyright all right reserved</h5>
+                <div class="icon-group">
+                    <div class="icon">
+                        <img src="./assets/icons/facebook.svg" alt="">
+                    </div>
+                    <div class="icon">
+                        <img src="./assets/icons/youtube.svg" alt="">
+                    </div>
+                    <div class="icon">
+                        <img src="./assets/icons/twitter.svg" alt="">
+                    </div>
+                    <div class="icon">
+                        <img src="./assets/icons/instagram.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
