sizes + nav fixing

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <a href="" class="nav-link">Plants</a>
                 <a href="" class="nav-link">About</a>
                 <a href="" class="nav-link">Contact</a>
-                <a href="" class="nav-link">C</a>
-                <a href="" class="nav-link">M</a>
+                <a href="" class="nav-link cart"><img src="./assets/icons/cart.svg" alt="Cart"></a>
+                <a href="" class="nav-link burger"><img src="./assets/icons/burger-menu.svg" alt="Menu"></a>
             </div>
         </nav>
         <div class="front-container container">
@@ -244,7 +244,7 @@
                             <label for="comment">Comment or Message <span>*</span></label>
                             <input type="text" id="comment" placeholder="Your message" required>
                         </div>
-                        <button type="submit" class="button green">Submit</button>
+                        <button type="submit" class="button green wide-footer">Submit</button>
                     </form>
                 </div>
             </div>
